name:                content-store
version:             0.1.0
license:             LGPL
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:   Data.ContentStore,
                     Data.ContentStore.Config,
                     Data.ContentStore.Digest

  build-depends:     aeson,
                     base >= 4.9 && < 4.10,
                     bytestring,
                     cond,
                     conduit >= 1.0.11,
                     conduit-combinators,
                     conduit-extra >= 1.1.0,
                     cryptonite,
                     directory,
                     filepath,
                     htoml,
                     mtl,
                     resourcet,
                     text,
                     transformers

  default-language:  Haskell2010
  ghc-options:       -Wall
