name:                content-store
version:             0.1.0
synopsis:            Store and retrieve data from an on-disk store
description:         This module provides a way to store and retrieve arbitrary
                     data from an on-disk store, similar to how a source
                     control system works but without the assumptions of such
                     a system.
homepage:            https://github.com/weldr/content-store
category:            System
author:              Chris Lumens
maintainer:          clumens@redhat.com
license:             LGPL
license-file:        LICENSE
build-type:          Simple
cabal-version:       >= 1.10

source-repository   head
    type:           git
    location:       https://github.com/weldr/content-store

library
  exposed-modules:   Data.ContentStore,
                     Data.ContentStore.Config,
                     Data.ContentStore.Digest

  build-depends:     aeson,
                     base >= 4.9 && < 4.10,
                     bytestring,
                     cond,
                     conduit >= 1.0.11,
                     conduit-combinators,
                     conduit-extra >= 1.1.0,
                     cryptonite >= 0.22,
                     directory,
                     filepath,
                     htoml,
                     lzma-conduit,
                     monad-control,
                     memory >= 0.14.3,
                     mtl,
                     resourcet,
                     temporary,
                     text,
                     transformers,
                     transformers-base,
                     unix

  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-depends:    base == 4.*,
                    bytestring,
                    hspec == 2.*,
                    memory >= 0.14.3,
                    content-store

  default-language: Haskell2010
  ghc-options: -Wall
